--- a/config/database.yml
+++ b/config/database.yml
@@ -22,8 +22,10 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
-  <<: *default
-  database: booklist_development
+  database: postgresql
+  host: localhost
+  username: user
+  database: app-dev
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
